--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-欢迎来到我的世界
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
+    <meta name="apple-touch-fullscreen" content="no">
+    <meta content="telephone=no" name="format-detection">
+    <meta name="apple-mobile-web-app-capable" content="no">
+   
+</head>
+<body>
+  <h1>我的世界</h1>
+<div style="color:red">
+    欢迎来到我的小屋，这里是快了的源泉
+</div>
+
+<script type="text/javascript">
+  
+</script>
+</body>
+</html>
