--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>我的世界</h1>
 <div style="color:red">
-    欢迎来到我的小屋，这里是快了的源泉
+    欢迎来到我的小屋，这里是快乐的源泉
 </div>
 
 <script type="text/javascript">
