--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <div style="color:red">
     欢迎来到我的小屋，这里是快乐的源泉
 </div>
- <a href="https://lihuawei123.github.io?lj.php">链接</a>
+    <div>我也不知道这是啥</div>
+ <a href="https://lihuawei123.github.io?lianjie.php">链接</a>
 
 <script type="text/javascript">
   
