--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     欢迎来到我的小屋，这里是快乐的源泉
 </div>
     <div>我也不知道这是啥</div>
- <a href="https://lihuawei123.github.io?lianjie.php">链接</a>
+ <a href="https://lihuawei123.github.io/lianjie.php">链接</a>
 
 <script type="text/javascript">
   
